98 без  картинок і новим методом з value